Fixed footer styling and alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Karla:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Karla:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700');
 
-/*--------------------------------------------Body*/
+/*--------------------------------------------Nav*/
 
 .site-wide-alert {
     margin: 0 !important;
     padding: 1 !important;
     margin-left: auto !important;
     margin-right: auto !important;
-}
-
-.col{
-    margin:0;
-    padding:0;
-    border:0;
-}
-
-body {
-    font-family: "Karla", "Montserrat";
 }
 
 #menu {
@@ -35,7 +25,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
     
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
 
@@ -60,6 +50,12 @@ body {
      font-weight: 600;
  }  
 
+/*--------------------------------------------Body*/
+
+body {
+    font-family: "Karla", "Montserrat";
+}
+
 hr {
     width: 80%;
     height: 1px;
@@ -72,7 +68,20 @@ hr {
     border-style:double;
 }
 
+.col{
+    margin:0;
+    padding:0;
+    border:0;
+}
+
 /*--------------------------------------------Hero-Image*/
+
+ .hero-outer
+{
+  height: 60vh;
+  width: 100%;
+  overflow: hidden;
+}
 
 #hero-image {
     height: 60vh;
@@ -238,28 +247,20 @@ hr {
 
 /*--------------------------------------------Order-influx-banner-images*/
 
-.update {
-    font-family: "Montserrat";
-    font-size: 100%;
-    font-weight: 500;
-    color: #fff;
-    line-height:1.8em;
-}
-
 .orderinflux {
     height: 10vh;
-    text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
-    background: url(../images/unsplash/macau-photo-agency-O8KXb87sTZs-unsplash.jpg); 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color: rgba(103, 128, 159, .8);
     
     display: flex;
     align-items: center;
     justify-content: center;
 
     position: relative;
+    font-family: "Karla";
+    font-size: 100%;
+    font-weight: 500;
+    color: #f8f8ff;
+    line-height:2em;
 }
 
 /*--------------------------------------------Quotes*/
@@ -434,8 +435,8 @@ footer{
     text-align: center;
 }
 
-#menu2 {
-    color: #777777; 
+#footermenu {
+    color: #777777;
     font-size: 80%;
     align-items: center;
     list-style-type: none;
@@ -443,40 +444,32 @@ footer{
     text-transform:none;
 }
 
-#menu2 a:hover {
+#footermenu a:hover {
      color:lightcoral;
 }
 
- #menu2 a {
+ #footermenu a {
+     color: #777777;
      text-decoration: none;
      font-size: 0.8rem;
-     color: #777777;
      font-weight: 400;
+     list-style-type: none;
  } 
 
-#logo2 {
-    max-width:6em;
-    height:2em;
-    background: url(../logo/alt-mighty-masks-logo.png);
+#footerlogo {
+    height: 2em;
+    width: 6em;
+    background: url(../logo/mighty-masks-footer-logo.png);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     
-    display: flex;
     align-items: center;
     justify-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
     position: relative;
 }
-
-#logo-copy-shopify {
-    color: #777777; 
-    font-size: 80%;
-    align-items: center;
-    list-style-type: none;
-    margin:0;
-    padding:0;
-    text-transform:none;
-}
-
